# eran-Compiler

./: ArrayOutOfBoundException.h  ArrayVar.cpp  ArrayVar.h  BadVariableTypeException.h  BoolArr.cpp  BoolArr.h  BoolVar.cpp  BoolVar.h  CMakeLists.txt  IntArr.cpp  IntArr.h  IntVar.cpp  IntVar.h  Makefile  README.md  RunnerException.cpp  RunnerException.h  ScrRunner.cpp  ScrRunner.h  StringArr.cpp  StringArr.h  StringVar.cpp  StringVar.h  Tester.sh  Tester.txt  Variable.cpp  Variable.h  VariableNotFoundException.h  main.cpp
